# fnyd

./: .gitignore  00_START_HERE.md  COMPLETION_SUMMARY.md  DEPLOYMENT_GUIDE.md  FILE_INVENTORY.md  FINAL_SUBMISSION_GUIDE.md  PROJECT_REPORT.md  PROJECT_STATUS.md  QUICK_START.md  README.md  VERIFICATION_CHECKLIST.md  VISUAL_SUMMARY.md
task1-rating-prediction/: README.md  rating_prediction.ipynb
task2-dashboard/: README.md
task2-dashboard/backend/: main.py  pyproject.toml  render.yaml  requirements.txt
task2-dashboard/frontend/: index.html  package.json  vercel.json
task2-dashboard/frontend/src/: App.jsx  index.css
task2-dashboard/frontend/src/api/: client.js
task2-dashboard/frontend/src/pages/: AdminDashboard.jsx  UserDashboard.jsx
